# pixel_mosaic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
pixel_mosaic/: __init__.py  cli.py  color_utils.py  config.py  dithering.py  image_io.py  palette.py  solver_annealing.py  solver_hungarian.py
tests/: test_mosaic.py
